исправлены недочёты, создан конфиг

--- a/.env.template
+++ b/.env.template
@@ -13,4 +13,6 @@ DJANGO_SUPERUSER_PASSWORD=123123
 ELASTIC_HOST=elasticsearch
 ELASTIC_PORT=9200
 ELASTIC_SCHEME=http
-STORAGE=state.json
+
+ELASTIC_INDEX=movies
+STATE_FILE_PATH=state.json
